# tld-download-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: linux_arm.yml  linux_x86_64.yml  macos.yml
examples/: main.rs  main_with_db.rs
src/: error.rs  lib.rs
