[package]
name = "tld_download"
version = "0.0.2"
authors = ["Marirs <marirs@gmail.com>"]
description = "Download public & private gTLC & ccTLD"
keywords = ["tld", "suffixes"]
readme = "README.md"
license-file = "LICENSE"
edition = "2021"

[dependencies]
futures = "0.3.19"
idna = "0.2.3"
regex = "1.5.4"
reqwest = { version = "0.11.9", features = ["native-tls-vendored"] }
thiserror = "1.0.30"
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
clap = { version = "3.0.13", features = ["cargo", "derive"] }

[lib]
name = "tld_download"
path = "src/lib.rs"

[[example]]
name = "tld_download"
path = "examples/main.rs"

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true

