[package]
name = "tld_download"
version = "0.1.3"
authors = ["Marirs <marirs@gmail.com>"]
description = "Download public & private gTLD & ccTLD"
keywords = ["tld", "suffixes"]
readme = "README.md"
license-file = "LICENSE"
include = ["src", "assets"]
repository = "https://github.com/marirs/tld-download-rs"
homepage = "https://github.com/marirs/tld-download-rs"
edition = "2021"

[dependencies]
futures = "0.3.31"
idna = "1.0.3"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["native-tls-vendored", "brotli", "gzip"] }
thiserror = "2.0.12"
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
clap = { version = "4.5.40", features = ["cargo", "derive"] }

[features]
with-db = []

[package.metadata.docs.rs]
all-features = true

[lib]
name = "tld_download"
path = "src/lib.rs"

[[example]]
name = "tld_download"
path = "examples/main.rs"

[[example]]
name = "tld_download_with_local_db"
path = "examples/main_with_db.rs"
required-features = ["with-db"]

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true

